# PAMSI

./: CMakeLists.txt  README.md  lorem.txt  main.cpp  script.txt
inc/: file_opener.hpp  reciever.hpp  sender.hpp  vector_custom.hpp
src/: file_opener.cpp  reciever.cpp  sender.cpp  vector_custom.cpp
